--- a/.github/workflows/act-build.yml
+++ b/.github/workflows/act-build.yml
@@ -16,6 +16,11 @@ on:
         options:
           - 64
           - 32
+      GO_VER:
+        description: 'go version'
+        required: true
+        default: '1.21'
+        type: string
 
 env:
   PRG_NAME:    "sumatrapdf"
@@ -25,6 +30,7 @@ env:
   TAG_BUILD:   "-b"
   TAG_REF:     "0000000"
   TAG_DATE:    "20230617T215000"
+  GO_VER:      1.21
   #build_target: '64'
 
 jobs:
@@ -99,7 +105,7 @@ jobs:
       - name: Set up Go
         uses: deep-soft/setup-go@v4
         with:
-          go-version: 1.19
+          go-version: ${{ env.GO_VER }}
 
       - name: Build
         continue-on-error: true
