--- a/.github/workflows/act-build.yml
+++ b/.github/workflows/act-build.yml
@@ -103,6 +103,7 @@ jobs:
         run: |
           echo "cat1:"
           cat ./do/build.go | grep buildPreRelease
+          sed -ibak 's/buildPreRelease(kPlatformIntel32, true)/buildPreRelease(kPlatformIntel64, true)/' ./do/build.go
           sed -ibak 's/buildPreRelease(kPlatformArm64, true)/buildPreRelease(kPlatformArm64, false)/' ./do/build.go
           sed -ibak 's/buildPreRelease(kPlatformIntel32, true)/buildPreRelease(kPlatformIntel32, false)/' ./do/build.go
           sed -ibak 's/buildPreRelease(kPlatformIntel64, false)/buildPreRelease(kPlatformIntel64, true)/' ./do/build.go
