--- a/.github/workflows/act-build.yml
+++ b/.github/workflows/act-build.yml
@@ -104,9 +104,10 @@ jobs:
           echo "cat1:"
           cat ./do/build.go | grep buildPreRelease
           sed -ibak 's/buildPreRelease(kPlatformIntel32, true)/buildPreRelease(kPlatformIntel64, true)/' ./do/build.go
-          sed -ibak 's/buildPreRelease(kPlatformArm64, true)/buildPreRelease(kPlatformArm64, false)/' ./do/build.go
-          sed -ibak 's/buildPreRelease(kPlatformIntel32, true)/buildPreRelease(kPlatformIntel32, false)/' ./do/build.go
-          sed -ibak 's/buildPreRelease(kPlatformIntel64, false)/buildPreRelease(kPlatformIntel64, true)/' ./do/build.go
+          sed -ibak 's/buildPreRelease(kPlatformArm64, true)/buildPreRelease(kPlatformIntel64, false)/' ./do/build.go
+          sed -ibak 's/buildPreRelease(kPlatformArm64, false)/buildPreRelease(kPlatformIntel64, false)/' ./do/build.go
+          sed -ibak 's/buildPreRelease(kPlatformIntel32, true)/buildPreRelease(kPlatformIntel64, false)/' ./do/build.go
+          sed -ibak 's/buildPreRelease(kPlatformIntel64, false)/buildPreRelease(kPlatformIntel64, false)/' ./do/build.go
           echo "cat2:"
           cat ./do/build.go | grep buildPreRelease
 
