--- a/.github/workflows/act-build.yml
+++ b/.github/workflows/act-build.yml
@@ -126,6 +126,14 @@ jobs:
           echo "cat2:"
           cat ./do/build.go | grep buildPreRelease
 
+      - name: install drmem
+        shell: bash
+        run: |
+          if [[ -f ./github/workflows/bin-install-drmem.sh ]]; then
+            echo "bash ./github/workflows/bin-install-drmem.sh"
+            bash ./github/workflows/bin-install-drmem.sh
+          fi
+
       - name: Set up Go
         uses: deep-soft/setup-go@v4
         with:
@@ -229,7 +237,37 @@ jobs:
           files: |
             _tag_name_.txt
             ${{ env.ZIP_RELEASE_ARCHIVE }}
-            ./out/final-prerel/SumatraPDF-prerel-${{ inputs.build_target}}.exe
-            ./out/final-prerel/SumatraPDF-prerel-${{ inputs.build_target}}.zip
-            ./out/final-prerel/SumatraPDF-prerel-${{ inputs.build_target}}-install.exe
+            ${{ env.OUT_DIR }}/SumatraPDF-prerel-${{ inputs.build_target}}.exe
+            ${{ env.OUT_DIR }}/SumatraPDF-prerel-${{ inputs.build_target}}.zip
+            ${{ env.OUT_DIR }}/SumatraPDF-prerel-${{ inputs.build_target}}-install.exe
 # upload release end
+
+# upload release latest begin
+      - name: Prepare to Publish latest
+        shell: bash
+        run: |
+          mv ${{ env.OUT_DIR }}/SumatraPDF-prerel-${{ inputs.build_target}}.exe ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}.exe
+          mv ${{ env.OUT_DIR }}/SumatraPDF-prerel-${{ inputs.build_target}}-install.exe ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}-install.exe
+          cp _tag_name_.txt ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}.txt
+
+      - name: SHA256 checksums
+        uses: deep-soft/sha-checksums@v1
+        with:
+          type: 'SHA256'
+          filename: 'SHA256SUMS'
+          directory: '${{ env.OUT_DIR }}'
+          path: '.'
+          env_variable: 'SHA_SUMS'
+          ignore_git: false
+
+      - name: Publish latest
+        continue-on-error: true
+        uses: deep-soft/action-gh-release@v1
+        with:
+          tag_name: ${{ env.TAG_NAME }}-latest
+          files: |
+            ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}.txt
+            ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}.exe
+            ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}-install.exe
+            ${{ env.SHA_SUMS }}
+# upload release latest end
