--- a/.github/workflows/act-install-drmem.yml
+++ b/.github/workflows/act-install-drmem.yml
@@ -29,8 +29,8 @@ jobs:
       - name: install drmem
         shell: bash
         run: |
-          ls -la ./github/workflows/ || true;
-          if [[ -f ./github/workflows/bin-install-drmem.sh ]]; then
-            echo "bash ./github/workflows/bin-install-drmem.sh"
-            bash ./github/workflows/bin-install-drmem.sh
+          ls -la bins/workflows/ || true;
+          if [[ -f .bins/bin-install-drmem.sh ]]; then
+            echo "bash bins/bin-install-drmem.sh"
+            bash bins/bin-install-drmem.sh
           fi
