--- a/.github/workflows/act-build.yml
+++ b/.github/workflows/act-build.yml
@@ -19,7 +19,7 @@ on:
       build_type:
         description: 'build type'
         required: true
-        default: 'drmem'
+        default: 'prerel'
         type: choice
         options:
           - drmem
