--- a/.github/workflows/act-build.yml
+++ b/.github/workflows/act-build.yml
@@ -250,13 +250,16 @@ jobs:
         shell: bash
         run: |
           pwd
+          ls -la || true;
           ls -la ${{ env.OUT_DIR }}/ || true;
           ls -la ${{ env.ZIP_RELEASE_ARCHIVE }} || true;
           mv ${{ env.OUT_DIR }}/SumatraPDF-prerel-${{ inputs.build_target}}.exe ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}.exe || true;
           mv ${{ env.OUT_DIR }}/SumatraPDF-prerel-${{ inputs.build_target}}-install.exe ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}-install.exe || true;
           #mv ${{ env.OUT_DIR }}/SumatraPDF.exe ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}.exe || true;
           cp _tag_name_.txt ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}.txt || true;
-          cp ${{ env.ZIP_RELEASE_ARCHIVE }}  ${{ env.OUT_DIR }}/ || true;
+          cp ${{ env.ZIP_RELEASE_ARCHIVE }} ${{ env.OUT_DIR }}/ || true;
+          rm ${{ env.OUT_DIR }}/SumatraPDF-prerel-64.pdb* || true;
+          ls -la ${{ env.OUT_DIR }}/ || true;
 
       - name: SHA256 checksums
         uses: deep-soft/sha-checksums@v1
@@ -274,6 +277,7 @@ jobs:
         with:
           tag_name: ${{ env.TAG_NAME }}-latest
           files: |
+            ${{ env.ZIP_RELEASE_ARCHIVE }}
             ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}.txt
             ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}.exe
             ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}-install.exe
