--- a/.github/workflows/act-build.yml
+++ b/.github/workflows/act-build.yml
@@ -252,14 +252,14 @@ jobs:
           pwd
           ls -la || true;
           ls -la ${{ env.OUT_DIR }}/ || true;
-          ls -la ${{ env.ZIP_RELEASE_ARCHIVE }} || true;
+          ls -la "${{ env.ZIP_RELEASE_ARCHIVE }}" || true;
           mv ${{ env.OUT_DIR }}/SumatraPDF-prerel-${{ inputs.build_target}}.exe ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}.exe || true;
           mv ${{ env.OUT_DIR }}/SumatraPDF-prerel-${{ inputs.build_target}}-install.exe ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}-install.exe || true;
           #mv ${{ env.OUT_DIR }}/SumatraPDF.exe ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}.exe || true;
           cp _tag_name_.txt ${{ env.OUT_DIR }}/SumatraPDF-${{ env.VERSION }}.txt || true;
-          cp ${{ env.ZIP_RELEASE_ARCHIVE }} ${{ env.OUT_DIR }}/ || true;
-          rm ${{ env.OUT_DIR }}/SumatraPDF-prerel-64.pdb* || true;
-          ls -la ${{ env.OUT_DIR }}/ || true;
+          cp "${{ env.ZIP_RELEASE_ARCHIVE }}" "${{ env.OUT_DIR }}/" || true;
+          rm "${{ env.OUT_DIR }}/SumatraPDF-prerel-64.pdb*" || true;
+          ls -la "${{ env.OUT_DIR }}/" || true;
 
       - name: SHA256 checksums
         uses: deep-soft/sha-checksums@v1
@@ -270,6 +270,11 @@ jobs:
           path: '.'
           env_variable: 'SHA_SUMS'
           ignore_git: false
+
+      - name: print SHA256 checksums
+        shell: bash
+        run: |
+          cat "${{ env.SHA_SUMS }}"
 
       - name: Publish latest
         continue-on-error: true
