--- a/.github/workflows/act-build.yml
+++ b/.github/workflows/act-build.yml
@@ -139,7 +139,7 @@ jobs:
           fi
 
       - name: Set up Go
-        uses: deep-soft/setup-go@v4
+        uses: deep-soft/setup-go@v5
         with:
           go-version: ${{ env.GO_VER }}
 
@@ -181,7 +181,7 @@ jobs:
 
 # Sign Windows executables begin
       - name: Sign Windows executables files
-        uses: deep-soft/code-sign-action@master
+        uses: deep-soft/code-sign-action@v9
         with:
           certificate: '${{ secrets.WINDOWS_PFX_BASE64 }}'
           password: '${{ secrets.WINDOWS_PFX_PASSWORD }}'
@@ -223,7 +223,7 @@ jobs:
 # upload artifacts begin
       - name: Upload zip
         continue-on-error: true
-        uses: deep-soft/upload-artifact@main
+        uses: deep-soft/upload-artifact@v4
         with:
           name: '${{ env.ZIP_NAME }}'
           path: '${{ env.ZIP_RELEASE_ARCHIVE }}'
@@ -234,7 +234,7 @@ jobs:
 # upload release begin
       - name: Publish
         continue-on-error: true
-        uses: deep-soft/action-gh-release@v1
+        uses: deep-soft/action-gh-release@v2.1
         with:
           #tag_name: ${{ env.TAG_NAME }}-${{ env.VERSION }}
           tag_name: ${{ env.TAG_NAME }}-${{ env.TAG_BUILD }}
@@ -256,8 +256,8 @@ jobs:
           ls -la "${{ env.ZIP_RELEASE_ARCHIVE }}" || true;
           mv SumatraPDF-prerel-${{ inputs.build_target}}.exe SumatraPDF-${{ env.VERSION }}.exe || true;
           mv SumatraPDF-prerel-${{ inputs.build_target}}-install.exe SumatraPDF-${{ env.VERSION }}-install.exe || true;
-          cp ${{ github.workspace }}/_tag_name_.txt ${{ env.PRG_NAME }}-${{ env.VERSION }}.txt || true;
-          cp ${{ github.workspace }}/'${{ env.ZIP_RELEASE_ARCHIVE }}' '.' || true;
+          cp ${{ env.WORK_DIR }}/_tag_name_.txt ${{ env.PRG_NAME }}-${{ env.VERSION }}.txt || true;
+          cp ${{ env.WORK_DIR }}/'${{ env.ZIP_RELEASE_ARCHIVE }}' '.' || true;
           rm SumatraPDF-prerel*.* || true;
           ls -la || true;
           popd
@@ -279,7 +279,7 @@ jobs:
 
       - name: Publish latest
         continue-on-error: true
-        uses: deep-soft/action-gh-release@v1
+        uses: deep-soft/action-gh-release@v2.1
         with:
           tag_name: ${{ env.TAG_NAME }}-latest
           files: |
