--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,9 +1,9 @@
 name: daily
 on:
-#  schedule:
-#    - cron: "0 1 * * *"
-#  repository_dispatch:
-#    types: [build-daily]
+  schedule:
+    - cron: "0 1 * * *"
+  repository_dispatch:
+    types: [build-daily]
   workflow_dispatch:
 jobs:
   build:
