--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -12,8 +12,8 @@
 name: "CodeQL"
 
 on:
-#  schedule:
-#    - cron: '45 10 * * 1'
+  schedule:
+    - cron: '45 10 * * 1'
   workflow_dispatch:
 
 jobs:
